--- a/style.ie7.css
+++ b/style.ie7.css
@@ -23,6 +23,29 @@
    display: none;
 }
 
+.art-hmenu>li, .art-hmenu>li>a
+{
+   display: inline !important;
+   zoom: 1;
+   float: none !important;
+   vertical-align: top;
+}
+ul.art-hmenu, ul.art-hmenu ul {
+   zoom: expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).className="cleared");
+}
+#art-hmenu-bg 
+{
+   display: none;
+}
+
+ul.art-hmenu>li:first-child {
+   padding-right:0;
+}
+
+ul.art-hmenu ul, .desktop-nav ul.art-hmenu>li.ext:hover>a{
+   background-color: #696969 !important;
+}
+
 .art-content-layout, .art-content-layout-row, .art-layout-cell 
 {
    display: block;
@@ -83,7 +106,7 @@ form.art-search
    display: none !important;
 }
 
-.art-content 
+.art-sidebar1 
 {
    width: auto;
    float:none;
