Исправил ошибку в шаблоне

--- a/style.responsive.css
+++ b/style.responsive.css
@@ -116,7 +116,7 @@
    display: block !important;
    top: 0 !important;
    left: 0 !important;
-   margin: 2% !important;
+   margin: 4% ;
    text-align: center !important;
 }
     
